--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.image {
+  height: 30vmin;
+  pointer-events: none;
 }
+
+
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +36,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+main {
+  padding: 30px;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+.project {
+  padding: 10px;
+  margin-bottom: 10px;
 }
